--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
+  <script async data-id="44669" src="https://cdn.widgetwhats.com/script.min.js"></script>
     
   </body>
 </html>
