--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-6 d-flex">
+				<div class="col-md-6 d-flex align-items-center js-fullheight justify-content-center">
 					<div class="img" style="background-image: url(images/contact.svg);background-size: contain;"></div>
 				</div>
 			</div>
