--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
                 <li class="ftco-animate"><a href="https://dribbble.com/manoj1991"><span class="icon-dribbble"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.behance.net/manojkhatri91"><span class="icon-behance"></span></a></li>
                 <li class="ftco-animate"><a href="https://github.com/khatrimanoj"><span class="icon-github"></span></a></li>
+				<li class="ftco-animate"><a href="https://www.twine.fm/manojkhatri"><span>Twine</span></a></li>
             </ul>
             <p>
   				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="#" target="_blank">Manoj Khatri</a>
